infra/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: amanclaw-cloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - cloud.amanclaw.my
      secretName: cloud-tls
  rules:
    - host: cloud.amanclaw.my
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-svc
                port:
                  number: 80
